--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/starlight": "^0.30.2",
     "astro": "^5.0.2",
     "sharp": "^0.32.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
