--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.30.2",
     "astro": "^5.0.2",
+    "astro-embed": "^0.9.0",
     "sharp": "^0.32.5"
   },
   "devDependencies": {
